[package]
name = "tramp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
catppuccin-egui = "2.0.1"
chrono = "0.4.24"
egui = "0.21.0"
egui-macroquad = "0.15.0"
egui-phosphor = "0.1.0"
ffmpeg-sidecar = "0.4.1"
macroquad = "0.3.25"
nfd2 = "0.3.1"
open = "4.1.0"
phf = { version = "0.11.1", features = ["macros"] }
savefile = "0.12.0"
savefile-derive = "0.12.0"
strum = "0.24.1"
strum_macros = "0.24.3"
